--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -20,7 +20,14 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring-version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.teja</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
+		</dependency>
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
